Fix icon not showing

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 :root {
   --high-icon: url(./assets/icons8-priority-48.png);
   --medium-icon: url(./assets/icons8-medium-priority-48.png);
   --low-icon: url(./assets/icons8-low-priority-48.png);
+  --plus-icon: url(./assets/icons8-plus.svg);
   --main: #706455;
   --background: #eec18c;
+  font-family: "Roboto", sans-serif;
 }
 body {
   background-color: var(--background);
@@ -15,9 +19,13 @@ header {
   justify-content: start;
   align-items: center;
   color: white;
-  height: 100px;
+  height: auto;
+}
+header > .header_buttons {
+  margin-bottom: 10px;
 }
 h1 {
+  margin-top: 10px;
 }
 h2 {
   margin: 0;
@@ -29,14 +37,35 @@ h2 {
   gap: 30px;
   margin: 20px;
 }
-#projectList > .project-item {
+.project-item {
   border: black 1px solid;
   height: 300px;
   width: 300px;
   background-color: #d9d9d9;
+  overflow: hidden;
+  border-radius: 10px;
 
   display: flex;
   flex-direction: column;
+}
+.add-project {
+  height: 300px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.add-project > button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.addProjectIcon {
+  background-image: var(--plus-icon);
+  display: inline-block;
+  width: 48px;
+  height: 48px;
+  background-size: 48px 48px;
 }
 #projectList > .project-item > h2 {
   text-align: center;
@@ -49,12 +78,12 @@ h2 {
   background-color: #eee;
   color: #444;
   cursor: pointer;
-  padding: 18px;
+
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
